# etl_rust

./: Cargo.toml
src/: aws.rs  config.rs  csvchunker.rs  main.rs  models.rs  parser.rs
