[package]
name = "xmlpoc"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
quick-xml = "0.31"
csv = "1.3"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["clock"]}
anyhow = "1"
